--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="stylesheet" href="./css/styles.css">
  </head>
  <body>
     <header>
         <nav>
             <a href="./index.html">WebStudio</a>
-          <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-          </ul>
+           <ul>
+             <li><a href="">Studio</a></li>
+             <li><a href="">Portfolio</a></li>
+             <li><a href="">Contacts</a></li>
+           </ul>
         </nav>
         <address>
         <ul>
@@ -78,10 +79,45 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/Banking App.jpg" alt="Banking App">
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/Cashless Payment.jpg" alt="Cashless Payment">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Meditation App.jpg" alt="Meditation App">
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/Taxi Service.jpg" alt="Taxi Service">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/Online Courses.jpg" alt="Online Courses">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-    </footer>
+    </footer>              
  </body>
 </html>
