--- a/index.html
+++ b/index.html
@@ -32,96 +32,96 @@
         </address>
     </header> 
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-order-btn">Order Service</button>
       </section>
-      <section>
-        <h2>Features</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business
+      <section class="features">
+        <h2 class="visually-hidden">Features</h2>
+        <ul class="features-list">
+          <li class="features-item">
+            <h3 class="features-subtitle">Strategy</h3>
+            <p class="features-item-text">Our goal is to identify the business
             problem to walk away with the perfect and creative solution.</p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          <li class="features-item">
+            <h3 class="features-subtitle">Punctuality</h3>
+            <p class="features-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          </li>
+          <li class="features-item">
+            <h3 class="features-subtitle">Diligence</h3>
+            <p class="features-item-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
-          </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
-          </li>
-        </ul>
-      </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
-            <img src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="features-subtitle">Technologies</h3>
+            <p class="features-item-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
-            <img src="./images/Banking App.jpg" alt="Banking App">
-            <h3>Banking App</h3>
-            <p>App</p>
+      <section class="team">
+        <h2 class="ourteam-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
+            <img class="team-img" src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260">
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-text">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/Cashless Payment.jpg" alt="Cashless Payment">
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img class="team-img" src="./images/tom.jpg" alt="Tom Ford" width="264" height="260">
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/Meditation App.jpg" alt="Meditation App">
-            <h3>Meditation App</h3>
-            <p>App</p>
+          <li class="team-item">
+            <img class="team-img" src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260">
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-text">Marketing</p>
           </li>
-          <li>
-            <img src="./images/Taxi Service.jpg" alt="Taxi Service">
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img class="team-img" src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260">
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-text">UI Designer</p>
           </li>
-          <li>
-            <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations">
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+        </ul>
+      </section>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img src="./images/banking-app.jpg" alt="Banking App" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-text">App</p>
           </li>
-          <li>
-            <img src="./images/Online Courses.jpg" alt="Online Courses">
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+          <li class="portfolio-item">
+            <img src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/meditation-app.jpg" alt="Meditation App" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-text">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/taxi-service.jpg" alt="Taxi Service" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-text">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-text">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="./images/online-courses.jpg" alt="Online Courses" width="360" height="300" class="portfolio-img">
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a class="header-logo" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>              
  </body>
 </html>
