--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              <li class="header-menu-item"><a class="header-menu-link" href="">Contacts</a></li>
            </ul>
         </nav>
-        <address>
+        <address class="contacts">
         <ul class="header-list">
             <li class="header-list-item">
               <a class="header-list-link" href="mailto:info@devstudio.com" target="_blank" rel="noopener noreferrer">info@devstudio.com</a>
